--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tailwindcss/vite": "^4.0.7",
     "framer-motion": "^12.4.4",
     "lucide-react": "^0.475.0",
+    "masonry-layout": "^4.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.15.1",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^4.0.7"
   },
